--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --cell-size: min(30px, 6vw);
+  --cell-size: min(60px, 9vw);
 }
 
 .press-start-2p-regular {
@@ -147,10 +147,12 @@ main {
 .game-board {
   display: grid;
   grid-template-columns: repeat(15, var(--cell-size));
-  grid-template-rows: repeat(20, var(--cell-size));
+  grid-template-rows: repeat(15, var(--cell-size));
+  max-width: calc(15 * var(--cell-size) + 2px);
+  min-width: calc(15 * 20px); 
+  max-height: 60vh;
+  overflow-y: auto;
   border: 1px solid #333;
-  max-width: 100%;
-  overflow: auto;
   box-shadow: 0 0 20px rgba(255, 69, 0, 0.7);
 }
 
@@ -285,10 +287,14 @@ footer img {
   width: 190px;
   height: auto;
 }
-
+@media (max-width: 900px) and (min-width: 601px) {
+  :root {
+    --cell-size: 30px;
+  }
+}
 @media (max-width: 600px) {
   :root {
-    --cell-size: 20px;
+    --cell-size: 25px;
   }
 
   .game-board {
